--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-02-18  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/modp256k1.h, src/modp256k1.c: New.
+
 2014-02-17  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/Makefile.in (CSRC): Follow the changes of filenames.
