--- a/THANKS
+++ b/THANKS
@@ -19,4 +19,5 @@ NAGAMI Takeshi		nagami-takeshi@aist.go.jp
 Nguyễn Hồng Quân	quannguyen@mbm.vn
 Paul Bakker		polarssl_maintainer@polarssl.org
 Shane Coughlan		scoughlan@openinventionnetwork.com
+Vasily Evseenko
 Werner Koch		wk@gnupg.org
