--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-03-13  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/mod25638.c: Rename from fe25519.c.
+	* src/mod25638.h: Likewise.
+
 2014-03-07  Niibe Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 1.1.2.
