--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* src/ecc-edwards.c (ed_add_25638): Remove the third argument.
 	(compute_kG_25519): The curve is complete, we don't need to avoid
 	identity element as NIST curve or secp256k1 curve.
+	(eddsa_25519): Change the API, with A and the seed.
 
 2014-03-26  Niibe Yutaka  <gniibe@fsij.org>
 
