--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-12-12  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/usb_lld.h: Don't use 'extern' for function declarations.
+	* src/usb-icc.c (end_cmd_apdu_data): Fix Le handling.
+
 2014-12-11  Niibe Yutaka  <gniibe@fsij.org>
 
 	* chopstx: Upgrade to 0.04.
