--- a/THANKS
+++ b/THANKS
@@ -17,7 +17,9 @@ Luis Felipe R. Murillo	luisfelipe@ucla.edu
 MATSUU Takuto		matsuu@gentoo.org
 NAGAMI Takeshi		nagami-takeshi@aist.go.jp
 Nguyễn Hồng Quân	quannguyen@mbm.vn
+NOKUBI Takatsugu	knok@daionet.gr.jp
 Paul Bakker		polarssl_maintainer@polarssl.org
 Shane Coughlan		scoughlan@openinventionnetwork.com
 Vasily Evseenko
 Werner Koch		wk@gnupg.org
+Yuji Imai		ug@xcast.jp
