--- a/THANKS
+++ b/THANKS
@@ -8,6 +8,7 @@ encouraging the development, testing the implementation, suggesting
 improvements, or fixing bugs.  Here is a list of those people.
 
 Achim Pietig		achim@pietig.com
+Aidan Thornton
 Andre Zepezauer		andre.zepezauer@student.uni-halle.de
 Hironobu SUZUKI		hironobu@h2np.net
 Jan Suhr		jan@suhr.info
