--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-07-11  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/configure (help): Add STM32_PRIMER2 and CQ_STARM.
+
+	* chopstx: Update to 0.06.
+
+	* tool/stlinkv2.py: Support 512kB version of STM32F103.
+	The size of executable file should be even.
+
 2015-07-07  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/Makefile.in (CSRC): Add ecc-mont.c.
@@ -31,8 +40,6 @@
 	* tool/asm-thumb/*.S: Updated for Cortex-M0.
 
 2015-06-30  Niibe Yutaka  <gniibe@fsij.org>
-
-	* chopstx: Update.
 
 	* src/sys.c: Update from chopstx/example-cdc/sys.c.
 
