--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2015-07-15  Niibe Yutaka  <gniibe@fsij.org>
 
+	* chopstx: Update to 0.07.
+	* src/sys.c: Update.
+	* src/sys.h: Update.
+	* src/gnuk.ld.in: Update.
+
 	* tool/stlinkv2.py (stlinkv2.get_chip_id): New.  Detect flash
 	size, too.
 	(main): Call stlinkv2.get_chip_id after MCU reset and stop.
