common binary support fix

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-07-16  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/configure (FLASH_PAGE_SIZE, FLASH_SIZE, MEMORY_SIZE)
+	[sys1_compat]: Use safe values for common binary.
+
 2015-07-15  Niibe Yutaka  <gniibe@fsij.org>
 
 	* tool/usb_strings.py (field): Add 'Board'.
